--- a/config/Dockerfile
+++ b/config/Dockerfile
@@ -1,9 +1,4 @@
-FROM java:8-jre
-MAINTAINER Alexander Lukyanchikov <sqshq@sqshq.com>
-
-ADD ./target/config.jar /app/
-CMD ["java", "-Xmx200m", "-jar", "/app/config.jar"]
-
-HEALTHCHECK --interval=30s --timeout=30s CMD curl -f http://localhost:8888/actuator/health || exit 1
-
-EXPOSE 8888
+FROM ubuntu
+RUN apt-get update 
+RUN apt-get install nginx 
+CMD [“echo”,”Image created”]
